force-app/main/default/objects/Opportunity/fields/Appunti_Stripe__c.field-meta.xml
<CustomField>
    <fullName>Appunti_Stripe__c</fullName>
    <label>Appunti Stripe</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>