force-app/main/default/objects/Opportunity/fields/Budget_massimo_stimato_con_la_planner__c.field-meta.xml
<CustomField>
    <fullName>Budget_massimo_stimato_con_la_planner__c</fullName>
    <label>Budget massimo stimato con la planner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>