force-app/main/default/objects/Opportunity/fields/Budget_max_stimato_luci_escluse__c.field-meta.xml
<CustomField>
    <fullName>Budget_max_stimato_luci_escluse__c</fullName>
    <label>Budget max stimato luci escluse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>