force-app/main/default/objects/Opportunity/fields/Caparra_50__c.field-meta.xml
<CustomField>
    <fullName>Caparra_50__c</fullName>
    <label>Caparra 50%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>