force-app/main/default/objects/Opportunity/fields/Caparra__c.field-meta.xml
<CustomField>
    <fullName>Caparra__c</fullName>
    <label>Caparra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>