force-app/main/default/objects/Opportunity/fields/Check_Event_Dates__c.field-meta.xml
<CustomField>
    <fullName>Check_Event_Dates__c</fullName>
    <formula>Event_End_Date__c &lt;  Event_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Event Dates</label>
    <type>Checkbox</type>
</CustomField>