force-app/main/default/objects/Opportunity/fields/Chiamata_prenotata__c.field-meta.xml
<CustomField>
    <fullName>Chiamata_prenotata__c</fullName>
    <label>Chiamata prenotata</label>
    <type>Date</type>
</CustomField>