force-app/main/default/objects/Opportunity/fields/Costo_Stripe__c.field-meta.xml
<CustomField>
    <fullName>Costo_Stripe__c</fullName>
    <label>Costo Stripe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>