force-app/main/default/objects/Opportunity/fields/Data_inserita_automaticamente__c.field-meta.xml
<CustomField>
    <fullName>Data_inserita_automaticamente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data inserita automaticamente</label>
    <type>Checkbox</type>
</CustomField>