force-app/main/default/objects/Opportunity/fields/Data_ricevuta_contratto_firmato__c.field-meta.xml
<CustomField>
    <fullName>Data_ricevuta_contratto_firmato__c</fullName>
    <label>Data ricezione contratto firmato</label>
    <type>Date</type>
</CustomField>