force-app/main/default/objects/Opportunity/fields/Data_ricezione_caparra__c.field-meta.xml
<CustomField>
    <fullName>Data_ricezione_caparra__c</fullName>
    <label>Data ricezione caparra</label>
    <type>Date</type>
</CustomField>