force-app/main/default/objects/Opportunity/fields/Data_ricezione_caparra_estesa__c.field-meta.xml
<CustomField>
    <fullName>Data_ricezione_caparra_estesa__c</fullName>
    <formula>TEXT(Year(Data_ricezione_caparra__c)) + &apos; &apos; +  
CASE(MONTH(Data_ricezione_caparra__c),
1, &apos;Gennaio&apos;,
2, &apos;Febbraio&apos;,
3, &apos;Marzo&apos;,
4, &apos;Aprile&apos;,
5, &apos;Maggio&apos;,
6, &apos;Giugno&apos;,
7, &apos;Luglio&apos;,
8, &apos;Agosto&apos;,
9, &apos;Settembre&apos;,
10, &apos;Ottobre&apos;,
11, &apos;Novembre&apos;,
12, &apos;Dicembre&apos;,
&quot; &quot;) + &apos; &apos; + TEXT(Day(Data_ricezione_caparra__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data ricezione caparra (estesa)</label>
    <type>Text</type>
</CustomField>