force-app/main/default/objects/Opportunity/fields/Data_ricezione_saldo__c.field-meta.xml
<CustomField>
    <fullName>Data_ricezione_saldo__c</fullName>
    <label>Data ricezione saldo</label>
    <type>Date</type>
</CustomField>