force-app/main/default/objects/Opportunity/fields/DataSecondoSollecito__c.field-meta.xml
<CustomField>
    <fullName>DataSecondoSollecito__c</fullName>
    <label>Data Secondo Sollecito</label>
    <type>Date</type>
</CustomField>