force-app/main/default/objects/Opportunity/fields/DataSollecitoVendita__c.field-meta.xml
<CustomField>
    <fullName>DataSollecitoVendita__c</fullName>
    <label>Data Sollecito Vendita</label>
    <type>Date</type>
</CustomField>