force-app/main/default/objects/Opportunity/fields/Days_to_event__c.field-meta.xml
<CustomField>
    <fullName>Days_to_event__c</fullName>
    <formula>IF (
Event_Start_Date__c - TODAY() &gt;0, Event_Start_Date__c - TODAY(), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to event</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>