force-app/main/default/objects/Opportunity/fields/DestinatarioPagamento__c.field-meta.xml
<CustomField>
    <fullName>DestinatarioPagamento__c</fullName>
    <label>Destinatario pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>