force-app/main/default/objects/Opportunity/fields/Difficolta_Logistica__c.field-meta.xml
<CustomField>
    <fullName>Difficolta_Logistica__c</fullName>
    <inlineHelpText>piano terra / ascensore / centro / stretto /</inlineHelpText>
    <label>Difficoltà Logistica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>