force-app/main/default/objects/Opportunity/fields/Event_End_Date_Extended__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Date_Extended__c</fullName>
    <formula>TEXT(Year(Event_End_Date__c)) + &apos; &apos; +  
CASE(MONTH(Event_End_Date__c),
1, &apos;Gennaio&apos;,
2, &apos;Febbraio&apos;,
3, &apos;Marzo&apos;,
4, &apos;Aprile&apos;,
5, &apos;Maggio&apos;,
6, &apos;Giugno&apos;,
7, &apos;Luglio&apos;,
8, &apos;Agosto&apos;,
9, &apos;Settembre&apos;,
10, &apos;Ottobre&apos;,
11, &apos;Novembre&apos;,
12, &apos;Dicembre&apos;,
&quot; &quot;) + &apos; &apos; + TEXT(Day(Event_End_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event End Date Extended</label>
    <type>Text</type>
</CustomField>