force-app/main/default/objects/Opportunity/fields/Event_Planner_Email__c.field-meta.xml
<CustomField>
    <fullName>Event_Planner_Email__c</fullName>
    <label>Event Planner Email</label>
    <type>Email</type>
</CustomField>