force-app/main/default/objects/Opportunity/fields/Event_Planner_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Planner_Name__c</fullName>
    <label>Event Planner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>