force-app/main/default/objects/Opportunity/fields/Eventi_in_contemporanea__c.field-meta.xml
<CustomField>
    <fullName>Eventi_in_contemporanea__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Eventi in contemporanea</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>