force-app/main/default/objects/Opportunity/fields/First_Name_Customer_1__c.field-meta.xml
<CustomField>
    <fullName>First_Name_Customer_1__c</fullName>
    <formula>Lead__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Name Customer 1</label>
    <type>Text</type>
</CustomField>