force-app/main/default/objects/Opportunity/fields/First_Name_Customer_2__c.field-meta.xml
<CustomField>
    <fullName>First_Name_Customer_2__c</fullName>
    <formula>Lead__r.First_Name_Customer_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Name Customer 2</label>
    <type>Text</type>
</CustomField>