force-app/main/default/objects/Opportunity/fields/Flower__c.field-meta.xml
<CustomField>
    <fullName>Flower__c</fullName>
    <label>Flower</label>
    <length>255</length>
    <type>Text</type>
</CustomField>