force-app/main/default/objects/Opportunity/fields/Guadagno_Netto__c.field-meta.xml
<CustomField>
    <fullName>Guadagno_Netto__c</fullName>
    <formula>SyncedQuote.TotalPrice  -  Tot_Gest_Econ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guadagno Netto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>