force-app/main/default/objects/Opportunity/fields/Link_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Link_pagamento__c</fullName>
    <label>Link pagamento</label>
    <type>Url</type>
</CustomField>