force-app/main/default/objects/Opportunity/fields/Location_Manager__c.field-meta.xml
<CustomField>
    <fullName>Location_Manager__c</fullName>
    <label>Location Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>