force-app/main/default/objects/Opportunity/fields/Musician__c.field-meta.xml
<CustomField>
    <fullName>Musician__c</fullName>
    <label>Musician</label>
    <length>255</length>
    <type>Text</type>
</CustomField>