force-app/main/default/objects/Opportunity/fields/N_fattura_per_caparra__c.field-meta.xml
<CustomField>
    <fullName>N_fattura_per_caparra__c</fullName>
    <label>N. fattura per caparra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>