force-app/main/default/objects/Opportunity/fields/N_fattura_per_saldo__c.field-meta.xml
<CustomField>
    <fullName>N_fattura_per_saldo__c</fullName>
    <label>N. fattura per saldo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>