force-app/main/default/objects/Opportunity/fields/Opp_automatica_da_web__c.field-meta.xml
<CustomField>
    <fullName>Opp_automatica_da_web__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opp automatica da web</label>
    <type>Checkbox</type>
</CustomField>