force-app/main/default/objects/Opportunity/fields/Photographer__c.field-meta.xml
<CustomField>
    <fullName>Photographer__c</fullName>
    <label>Photographer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>