force-app/main/default/objects/Opportunity/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <formula>IF(
				ISPICKVAL( DestinatarioPagamento__c, &apos;Lead&apos;),
			Lead__r.FirstName + &apos; &apos; + Lead__r.LastName,
			
			IF(
							ISPICKVAL( DestinatarioPagamento__c, &apos;Account&apos;) &amp;&amp; Account.IsPersonAccount = TRUE,
						Account.FirstName + &apos; &apos; + Account.LastName,
						Account.Name
							)
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recipient Name</label>
    <type>Text</type>
</CustomField>