force-app/main/default/objects/Opportunity/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <label>Where did you hear about us?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reference</valueSetName>
    </valueSet>
</CustomField>