force-app/main/default/objects/Opportunity/fields/Saldo_50__c.field-meta.xml
<CustomField>
    <fullName>Saldo_50__c</fullName>
    <label>Saldo 50%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>