force-app/main/default/objects/Opportunity/fields/Service_audio_lights_video__c.field-meta.xml
<CustomField>
    <fullName>Service_audio_lights_video__c</fullName>
    <label>Service audio / lights / video</label>
    <length>255</length>
    <type>Text</type>
</CustomField>