force-app/main/default/objects/Opportunity/fields/TECH_ReminderSent__c.field-meta.xml
<CustomField>
    <fullName>TECH_ReminderSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder sent</label>
    <type>Checkbox</type>
</CustomField>