force-app/main/default/objects/Opportunity/fields/Tot_Gest_Econ__c.field-meta.xml
<CustomField>
    <fullName>Tot_Gest_Econ__c</fullName>
    <label>Tot. Gest. Econ.</label>
    <summarizedField>Gestionale_Economico__c.Prezzo_lordo_fornitore__c</summarizedField>
    <summaryForeignKey>Gestionale_Economico__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>