force-app/main/default/objects/Opportunity/fields/Tutto_Organizzato__c.field-meta.xml
<CustomField>
    <fullName>Tutto_Organizzato__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tutto Organizzato</label>
    <type>Checkbox</type>
</CustomField>