force-app/main/default/objects/Opportunity/fields/Wedding_Theme__c.field-meta.xml
<CustomField>
    <fullName>Wedding_Theme__c</fullName>
    <label>Wedding Theme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>