force-app/main/default/objects/Opportunity/validationRules/Account_or_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_or_Lead</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(AccountId) &amp;&amp;
	ISBLANK (Lead__c)</errorConditionFormula>
    <errorMessage>Almeno uno tra Account e Lead deve essere inserito sull&apos;Opportunità</errorMessage>
</ValidationRule>