force-app/main/default/objects/Opportunity/validationRules/Closed_Lost_With_Loss_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Lost_With_Loss_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL ( StageName , &apos;Chiuse/Perse&apos;) &amp;&amp;
ISBLANK ( TEXT(Loss_Reason__c ))</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Quando l&apos;Opportunità è persa, il campo Loss Reason deve essere compilato</errorMessage>
</ValidationRule>