force-app/main/default/objects/Opportunity/listViews/Chiuse_Vinte_Non_ancora_organizzato.listView-meta.xml
<ListView>
    <fullName>Chiuse_Vinte_Non_ancora_organizzato</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Loss_Reason__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Chiuse/Conseguite</value>
    </filters>
    <filters>
        <field>Tutto_Organizzato__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Event_Start_Date__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Vinte future - Non ancora organizzate</label>
</ListView>