force-app/main/default/objects/Opportunity/listViews/Eventi_da_vendere_prossimi_9_mesi.listView-meta.xml
<ListView>
    <fullName>Eventi_da_vendere_prossimi_9_mesi</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>Reference__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Chiuse/Perse</value>
    </filters>
    <filters>
        <field>Event_Start_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_N_MONTHS:9</value>
    </filters>
    <filters>
        <field>Event_Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Chiuse/Conseguite</value>
    </filters>
    <label>Eventi da vendere prossimi 9 mesi</label>
</ListView>