force-app/main/default/objects/Opportunity/listViews/Tutte_le_opportunit_aperte.listView-meta.xml
<ListView>
    <fullName>Tutte_le_opportunit_aperte</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Eventi_in_contemporanea__c</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Chiuse/Perse</value>
    </filters>
    <filters>
        <field>Event_End_Date__c</field>
        <operation>greaterThan</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Tutte le opportunità aperte</label>
</ListView>