force-app/main/default/objects/Opportunity/listViews/Tutte_le_Opportunita.listView-meta.xml
<ListView>
    <fullName>Tutte_le_Opportunita</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Loss_Reason__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tutte le Opportunità</label>
</ListView>